--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "1  msQe1u7Z_XuqjGoqhB0J5g  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "Name: text, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,8 @@
     }
    ],
    "source": [
-    "df['text'].map(lambda x: 'Good' if any([word in x.lower() for word in ['awesome', 'love', 'good', 'great']]) else 'Bad').head()"
+    "df['text'].map(lambda x: 'Good' if any([word in x.lower() for word in ['awesome', 'love', 'good', 'great']]) else 'Bad').head()\n",
+    "\n"
    ]
   },
   {
@@ -640,6 +641,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i:0, i%2:0\n",
+      "i:1, i%2:1\n",
+      "i:2, i%2:0\n",
+      "i:3, i%2:1\n",
+      "i:4, i%2:0\n",
+      "i:5, i%2:1\n",
+      "i:6, i%2:0\n",
+      "i:7, i%2:1\n",
+      "i:8, i%2:0\n",
+      "i:9, i%2:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(f\"i:{i}, i%2:{i%2}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -830,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
